2011-08-31  Jim Meyering  <meyering@redhat.com>

	tests: avoid spurious assertion failure in test-float.c on ppc64
	* tests/test-float.c (test_long_double): Comment out an assertion,
	LDBL_MIN_EXP <= DBL_MIN_EXP, that is failing at least on PowerPC-64
	with gcc-4.4.4.

2011-08-31  Bruno Haible  <bruno@clisp.org>

	freopen: Documentation.
	* doc/posix-functions/freopen.texi: Document the bug with the NULL file
	name.
	Reported by Claudio Bley <claudio.bley@gmail.com>.

2011-08-31  Claudio Bley  <claudio.bley@gmail.com>  (tiny change)

	freopen: Don't crash if the filename argument is NULL.
	* lib/freopen.c (rpl_freopen): Don't compare the filename if it is
	NULL.

2011-08-30  Paul Eggert  <eggert@cs.ucla.edu>

	openat: work around AIX 7.1 fstatat bug
	Problem reported by Kevin Brott for GNU tar, in the thread containing
	<http://lists.gnu.org/archive/html/bug-tar/2011-08/msg00015.html>.
	* lib/fstatat.c (rpl_fstatat): Do not invoke underlying fstatat if
	FSTATAT_ST_SIZE_ETC_BROKEN.
	(fstatat) [FSTATAT_ST_SIZE_ETC_BROKEN && HAVE_FSTATAT]: #define to
	rpl_fstatat.
	* m4/openat.m4 (gl_FUNC_FSTATAT): New macro, with the fstatat-relevant
	part of gl_FUNC_OPENAT.  Also, check for the AIX 7.1 bug, and use
	AC_CHECK_FUNCS_ONCE for fstatat.
	(gl_FUNC_OPENAT): Use it.  Use AC_CHECK_FUNCS_ONCE for
	fchmodat, mkdirat, openat and unlinkat.

2011-08-30  Bruno Haible  <bruno@clisp.org>

	Avoid endless recursions if config.h includes some header files.
	* lib/fopen.c (__need_FILE): Define already before including config.h.
	* lib/freopen.c (__need_FILE): Likewise.
	* lib/open.c (__need_system_fcntl_h): Likewise.
	* lib/stat.c (__need_system_sys_stat_h): Likewise.
	* lib/lstat.c (__need_system_sys_stat_h): Likewise.
	Reported by Michael Goffioul <michael.goffioul@gmail.com>.

2011-08-25  Karl Berry  <karl@gnu.org>

	* config/srclist.txt (ylwrap): new try.
	* build-aux/ylwrap: new file.

2011-08-23  Bruno Haible  <bruno@clisp.org>
